[development] Auto commit on 2025-12-10 15:42:55 | Files: src/main/java/com/emenu/features/product/controller/CategoryController.java src/main/java/com/emenu/features/product/controller/ProductController.java src/main/java/com/emenu/features/product/controller/ProductPromotionController.java src/main/java/com/emenu/features/product/controller/SubCategoryController.java src/main/java/com/emenu/features/product/service/SubCategoryService.java src/main/java/com/emenu/features/product/service/impl/SubCategoryServiceImpl.java src/main/java/com/emenu/features/product/dto/request/AllSubCategoryRequest.java